feat(3-week): добавил CRUD операции для городов пользователя
feat:
- добавил репозиторий, сервис и http-хендлер для городов пользователя
- добавил доменную модель для города пользователя

chore:
- обновил API спецификацию с ручками для городов пользователя
