# 3-week/internal/adapters/transport/http/v1/city/dto/request.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateCityRequest struct {
+	City string `json:"city"`
+}
